<resources>
    <string name="app_name">Chess Club Hub</string>
    <string name="app_title">The Chess Club Hub!</string>
    <string name="home_page_announcement_title">New Announcement:</string>
    <string name="home_page_event_title">Upcoming Events:</string>
    <string name="home_page"></string>
    <string name="title_activity_announcements">AnnouncementsActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_announcement">AnnouncementActivity</string>
    <string name="back_button">Back</string>
    <string name="post">Post</string>
    <string name="post_info">04/8/23 (5:30pm) -Join me and some friends for chess in VLB</string>
    <string name="post_info2">04/10/23 (10:00am) -We are having a chess tournament in South lounge anyone is welcome</string>
    <string name="post_info3">05/01/23 (12:00pm) -Chess in Lesher lounge, be there or be square</string>

    <string name="announcement_title_edit_text">Please type the Announcement title here</string>
    <string name="announcement_author_edit_text">Please write your full name here</string>
    <string name="announcement_content_edit_text">Please type the Announcement content here</string>
    <string name="game_title_edit_text">Please type the names of the players here</string>
    <string name="game_author_edit_text">Please write your full name here</string>
    <string name="game_content_edit_text">Please type the game moves here</string>
    <string name="title_activity_games">GamesActivity</string>

    <string name="event_title_edit">Please type the Event title here</string>
    <string name="event_date_edit">Please type the Event date here</string>
    <string name="event_content_edit">Please provide a description of the event here</string>

    <string name="game_log_tab_text">Game Log</string>
    <string name="game_recorder_tab_text">Game Recorder</string>
    <string name="game_export_text">Export</string>
    <string name="game_save_text">Save</string>
    <string name="game_event_name_hint">Enter event name here</string>
    <string name="game_event_date_hint">Enter event date here</string>
    <string name="game_event_site_hint">Enter event site here</string>
    <string name="game_black_hint">Enter name of player with black pieces</string>
    <string name="game_white_hint">Enter name of player with white pieces</string>
    <string name="game_result_hint">Enter game result here</string>
    <string name="game_moves_text">Enter game moves</string>
    <string name="game_moves_title_text">Moves</string>

    <string name="login_user_hint">Enter CCH Username here</string>
    <string name="login_pwd_hint">Enter CCH Password here</string>
    <string name="login_button_text">Login!</string>
    <string name="logout_button_text">Logout!</string>

    <string name="example_username">cchadmin1</string>
    <string name="example_password">CS300IsAwesome!</string>

    <string name="edit_button">Edit</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="delete_button">Delete</string>

    <string name="won">(1)</string>
    <string name="lost">(0)</string>
    <string name="draw">(1/2)</string>

</resources>