<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePostActivity">

    <Button
        android:id="@+id/gameSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/chess"
        android:text="@string/game_save_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956">

    </Button>

    <ImageButton
        android:id="@+id/login_page"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:contentDescription="Admin login page"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/announcement_page"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:contentDescription="Announcement page"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/announcements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/game_page"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="248dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:contentDescription="Game page"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/negative_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/event_page"
        android:layout_width="90dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:contentDescription="Event page"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/home_page"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:contentDescription="Home page"
        android:padding="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="414dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/gameRecorderTab"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/cch_gray"
            android:textColor="@color/chess"
            android:text="@string/game_recorder_tab_text" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/gameLogTab"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/cch_gray"
            android:textColor="@color/black"
            android:text="@string/game_log_tab_text" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="490dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="137dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/gameDateEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/game_event_date_hint" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/gameNameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/game_event_name_hint" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/gameSiteEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/game_event_site_hint" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/gameBlackEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/game_black_hint" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/gameWhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/game_white_hint" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/gameResultEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/game_result_hint"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <EditText
                android:id="@+id/gameMovesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/game_moves_text" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>