<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/login_page"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/negative_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/announcement_page"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/announcements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/game_page"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="248dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/event_page"
        android:layout_width="90dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/home_page"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:background="@color/chess"
        android:padding="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_user_edit"
        android:layout_width="406dp"
        android:layout_height="68dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/login_user_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

    <EditText
        android:id="@+id/login_pwd_edit"
        android:layout_width="413dp"
        android:layout_height="71dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/login_pwd_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/chess"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/chess"
        android:text="@string/logout_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <Button
        android:id="@+id/loginState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:backgroundTint="@color/cch_maroon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

</androidx.constraintlayout.widget.ConstraintLayout>